--- a/template/teatrou/0/docker-compose.yml
+++ b/template/teatrou/0/docker-compose.yml
@@ -1,5 +1,5 @@
 teatrou:
-  image: highlanderdantas/teatrou
+  image: highlanderdantas/teatrou:1
   restart: always
   environment: 
     - ACESS_KEY=${acess_key}
