--- a/template/jiva-w/0/docker-compose.yml
+++ b/template/jiva-w/0/docker-compose.yml
@@ -65,7 +65,7 @@ services:
 
   {{- if eq .Values.data_sync "true"}}
   datasync:
-    image: highlanderdantas/datasync:4
+    image: highlanderdantas/datasync:5
     restart: always
     volumes: 
       - /home/mgeweb/compartilhado/clientes/{{ .Stack.Name }}/datasync/conf:/home/mgeweb/DataSync/conf
@@ -78,7 +78,7 @@ services:
       - /home/mgeweb/compartilhado/clientes/{{ .Stack.Name }}/datasync/tracking:/home/mgeweb/DataSync/tracking
       - /home/mgeweb/compartilhado/clientes/{{ .Stack.Name }}/datasync/work:/home/mgeweb/DataSync/work
       - /home/mgeweb/compartilhado/pacotes/datasync:/home/mgeweb/pacotes-datasync/  # Pacotes do Data Sync
-    command: ["/bin/sh","-c", "java -jar /home/mgeweb/DDM/docker-datasync-manager.jar && /home/mgeweb/./run-datasync.sh && /home/mgeweb/DataSync/./datasync-service start && sleep 3 && tail -f /home/mgeweb/DataSync/log/server.log"]
+    command: ["/bin/sh","-c", "sudo chown -R mgeweb:mgeweb /home/mgeweb/DataSync/ /home/mgeweb/pacotes-datasync/ &&java -jar /home/mgeweb/DDM/docker-datasync-manager.jar && /home/mgeweb/./run-datasync.sh && /home/mgeweb/DataSync/./datasync-service start && sleep 3 && tail -f /home/mgeweb/DataSync/log/server.log"]
     mem_reservation: 512m
   {{- end}}
 
