--- a/template/jiva-w/0/docker-compose.yml
+++ b/template/jiva-w/0/docker-compose.yml
@@ -38,7 +38,7 @@ services:
         response_timeout: 60000
 
   sas:
-    image: paulohms/sas:10.0
+    image: highlanderdantas/sas:6
     restart: always
     environment:
       - IP_BD_JIVAW=${ip_bd}
