--- a/template/sankhya-w/0/docker-compose.yml
+++ b/template/sankhya-w/0/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '2'
 services:
   sankhya-w:
-    image: highlanderdantas/snk-jiva-w
+    image: highlanderdantas/snk-jiva-w:3.2
     restart: always
     environment:
       - IP_BD_SNKW=${ip_bd}
@@ -12,6 +12,7 @@ services:
       - PACOTE_SNKW=${pacote_snkw}
       - TIPO_SERVIDOR=WILDFLY
       - TIPO_BD=${tp_bd}
+      - MEMORIA_JBOSS=${memoria_jboss}
     links:
       - sas
     volumes: 
@@ -19,8 +20,8 @@ services:
       - /home/mgeweb/compartilhado/clientes/{{ .Stack.Name }}/logs/:/home/mgeweb/wildfly_producao/standalone/log # logs do JBOSS
       - /home/mgeweb/compartilhado/clientes/{{ .Stack.Name }}/SanNFe/:/home/mgeweb/SanNFe # Certificados do SanNFe
       - /home/mgeweb/compartilhado/pacotes/sannfe:/home/mgeweb/pacotes-sannfe/  # Pacotes do SanNFe
-      - /home/mgeweb/compartilhado/pacotes/sankhyaw:/home/mgeweb/sankhyaw-dpm/pkgs # Pkgs Sankhya-W
-    command: ["/bin/sh","-c", "sed -i 's/-Xms1024M -Xmx1024M/${memoria_jboss}/g' /home/mgeweb/wildfly_producao/bin/standalone.conf && mkdir -p /home/mgeweb/wildfly_producao/tmp && echo 'JAVA_OPTS=\"$$JAVA_OPTS -Djava.io.tmpdir=/home/mgeweb/wildfly_producao/tmp -XX:MinHeapFreeRatio=15 -XX:MaxHeapFreeRatio=30\"' >> /home/mgeweb/wildfly_producao/bin/standalone.conf && java -jar /home/mgeweb/DPM/docker-package-manager.jar && sudo chown mgeweb:mgeweb / && /home/mgeweb/./sannfe.sh && /home/mgeweb/./visualvm.sh && sleep 2 && rm -f /home/mgeweb/wildfly_producao/standalone/deployments/wpm.war && sed -i 's/<min-pool-size>100</<min-pool-size>10</g' /home/mgeweb/wildfly_producao/standalone/deployments/mge-ds.xml && sed -i 's/<max-pool-size>100</<max-pool-size>50</g' /home/mgeweb/wildfly_producao/standalone/deployments/mge-ds.xml && /home/mgeweb/wildfly_producao/bin/./standalone.sh -Djape.lazy.init=true -Djape.lob.fields.as.lazy=true -Djape.ignore.ligacao.inconsistente=true"]
+      - /home/mgeweb/compartilhado/pacotes/jivaw:/home/mgeweb/sankhyaw-dpm/pkgs # Pkgs Jiva-W
+    command: ["/bin/sh","-c", "sudo chown -R mgeweb:mgeweb /home/mgeweb/sankhyaw-dpm/ /home/mgeweb/repositorio /home/mgeweb/pacotes-sannfe/ && /home/mgeweb/./wildfly.sh && java -jar /home/mgeweb/DPM/docker-package-manager.jar && sleep 2 && /home/mgeweb/./sannfe.sh &&  sudo chown -R mgeweb:mgeweb /home/mgeweb/SanNFe /home/mgeweb/wildfly_producao/standalone/log  && /home/mgeweb/./visualvm.sh && sed -i 's/<min-pool-size>100</<min-pool-size>10</g' /home/mgeweb/wildfly_producao/standalone/deployments/mge-ds.xml && sed -i 's/<max-pool-size>100</<max-pool-size>50</g' /home/mgeweb/wildfly_producao/standalone/deployments/mge-ds.xml &&  sleep 2 && /home/mgeweb/wildfly_producao/bin/./standalone.sh -Djape.lazy.init=true -Djape.lob.fields.as.lazy=true -Djape.ignore.ligacao.inconsistente=true"]
     mem_limit: ${memory_container}m 
     mem_reservation: 1024m
     mem_swappiness: 10 # Irá usar o swap apenas quando tiver 10% de mem disponível
@@ -37,7 +38,7 @@ services:
         response_timeout: 60000
 
   sas:
-    image: highlanderdantas/sas
+    image: highlanderdantas/sas:7.3
     restart: always
     environment:
       - IP_BD_SNKW=${ip_bd}
@@ -46,10 +47,11 @@ services:
       - USUARIO_BD_SNKW=${usuario_bd}
       - SENHA_BD_SNKW=${senha_bd}
       - HASDELPHI=${sas_delphi}
+      - TIPO_BD=${tp_bd}
     volumes: 
       - /home/mgeweb/compartilhado/pacotes/sas:/home/mgeweb/pacotes-sas/  # Pacotes do SAS
       - /home/mgeweb/compartilhado/clientes/{{ .Stack.Name }}/SAS/:/opt/SAS/licenca # Licenca do SAS
-    command: ["/bin/sh","-c", "java -jar /opt/DSM/docker-sas-manager.jar /SAS  && sleep 2 && /opt/./run-sas.sh && sleep 2 && tail -f /opt/SAS/log/server*.log"]
+    command: ["/bin/sh","-c", "sudo chown -R mgeweb:mgeweb  /home/mgeweb/pacotes-sas/ /tmp/ && java -jar /opt/DSM/docker-sas-manager.jar /SAS  && tar -xzf /tmp/SAS.tar.gz -C /tmp/ &&  sudo chown -R mgeweb:mgeweb /tmp/ /opt/SAS/ && sleep 2  && /opt/./run-sas.sh && sleep 2 && tail -f /opt/SAS/log/server*.log"]
     mem_reservation: 100m
     health_check:
       response_timeout: 60000
@@ -63,7 +65,7 @@ services:
 
   {{- if eq .Values.data_sync "true"}}
   datasync:
-    image: highlanderdantas/datasync:1.1
+    image: highlanderdantas/datasync:7
     restart: always
     volumes: 
       - /home/mgeweb/compartilhado/clientes/{{ .Stack.Name }}/datasync/conf:/home/mgeweb/DataSync/conf
@@ -76,13 +78,13 @@ services:
       - /home/mgeweb/compartilhado/clientes/{{ .Stack.Name }}/datasync/tracking:/home/mgeweb/DataSync/tracking
       - /home/mgeweb/compartilhado/clientes/{{ .Stack.Name }}/datasync/work:/home/mgeweb/DataSync/work
       - /home/mgeweb/compartilhado/pacotes/datasync:/home/mgeweb/pacotes-datasync/  # Pacotes do Data Sync
-    command: ["/bin/sh","-c", "java -jar /home/mgeweb/DDM/docker-datasync-manager.jar && /home/mgeweb/./run-datasync.sh && /home/mgeweb/DataSync/./datasync-service start && sleep 3 && tail -f /home/mgeweb/DataSync/log/server.log"]
+    command: ["/bin/sh","-c", "sudo chown -R mgeweb:mgeweb /home/mgeweb/DataSync/ /home/mgeweb/pacotes-datasync/ &&java -jar /home/mgeweb/DDM/docker-datasync-manager.jar && /home/mgeweb/./run-datasync.sh && /home/mgeweb/DataSync/./datasync-service start && sleep 3 && tail -f /home/mgeweb/DataSync/log/server.log"]
     mem_reservation: 512m
   {{- end}}
 
   {{- if eq .Values.e_social "true"}}
   sanesocial:
-    image: highlanderdantas/esocial
+    image: highlanderdantas/esocial:1
     restart: always
     volumes:
       - /home/mgeweb/compartilhado/clientes/{{ .Stack.Name }}/sanesocial/conf:/home/mgeweb/sanesocial/conf
