--- a/template/jiva-w/1/docker-compose.yml
+++ b/template/jiva-w/1/docker-compose.yml
@@ -16,7 +16,7 @@ services:
     links:
       - sas
     volumes: 
-      - /home/mgeweb/compartilhado/clientes/{{ .Name }}/repositorio/:/home/mgeweb/repositorio # Repositório de arquivos
+      - /home/mgeweb/compartilhado/clientes/{{ .ID }}/repositorio/:/home/mgeweb/repositorio # Repositório de arquivos
       - /home/mgeweb/compartilhado/clientes/{{ .Environment.Name  }}/logs/:/home/mgeweb/wildfly_producao/standalone/log # logs do JBOSS
       - /home/mgeweb/compartilhado/clientes/{{ .Stack.Name }}/SanNFe/:/home/mgeweb/SanNFe # Certificados do SanNFe
       - /home/mgeweb/compartilhado/pacotes/sannfe:/home/mgeweb/pacotes-sannfe/  # Pacotes do SanNFe
