--- a/template/jiva-w/0/docker-compose.yml
+++ b/template/jiva-w/0/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       - TIPO_SERVIDOR=WILDFLY
       - TIPO_BD=${tp_bd}
       - MEMORIA_JBOSS=${memoria_jboss}
+      - CLIENTE={{ .Stack.Name }}
     links:
       - sas
     volumes: 
