--- a/template/jiva-w/1/docker-compose.yml
+++ b/template/jiva-w/1/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '2'
 services:
   jiva-w:
-    image: highlanderdantas/snk-jiva-w:3.2
+    image: highlanderdantas/snk-jiva-w-sentry:1.0
     restart: always
     environment:
       - IP_BD_JIVAW=${ip_bd}
@@ -13,12 +13,13 @@ services:
       - TIPO_SERVIDOR=WILDFLY
       - TIPO_BD=${tp_bd}
       - MEMORIA_JBOSS=${memoria_jboss}
+      - CLIENTE={{ .Stack.Name }}
     links:
       - sas
     volumes: 
-      - /home/mgeweb/compartilhado/clientes/{{ .Identity.Data.Name }}/repositorio/:/home/mgeweb/repositorio # Repositório de arquivos
-      - /home/mgeweb/compartilhado/clientes/{{ .UID  }}/logs/:/home/mgeweb/wildfly_producao/standalone/log # logs do JBOSS
-      - /home/mgeweb/compartilhado/clientes/{{ .User }}/SanNFe/:/home/mgeweb/SanNFe # Certificados do SanNFe
+      - /home/mgeweb/compartilhado/clientes/{{ .Stack.Name }}/repositorio/:/home/mgeweb/repositorio # Repositório de arquivos
+      - /home/mgeweb/compartilhado/clientes/{{ .Stack.Name }}/logs/:/home/mgeweb/wildfly_producao/standalone/log # logs do JBOSS
+      - /home/mgeweb/compartilhado/clientes/{{ .Stack.Name }}/SanNFe/:/home/mgeweb/SanNFe # Certificados do SanNFe
       - /home/mgeweb/compartilhado/pacotes/sannfe:/home/mgeweb/pacotes-sannfe/  # Pacotes do SanNFe
       - /home/mgeweb/compartilhado/pacotes/jivaw:/home/mgeweb/sankhyaw-dpm/pkgs # Pkgs Jiva-W
     command: ["/bin/sh","-c", "sudo chown -R mgeweb:mgeweb /home/mgeweb/sankhyaw-dpm/ /home/mgeweb/repositorio /home/mgeweb/pacotes-sannfe/ && /home/mgeweb/./wildfly.sh && java -jar /home/mgeweb/DPM/docker-package-manager.jar && sleep 2 && /home/mgeweb/./sannfe.sh &&  sudo chown -R mgeweb:mgeweb /home/mgeweb/SanNFe /home/mgeweb/wildfly_producao/standalone/log  && /home/mgeweb/./visualvm.sh && sed -i 's/<min-pool-size>100</<min-pool-size>10</g' /home/mgeweb/wildfly_producao/standalone/deployments/mge-ds.xml && sed -i 's/<max-pool-size>100</<max-pool-size>50</g' /home/mgeweb/wildfly_producao/standalone/deployments/mge-ds.xml &&  sleep 2 && /home/mgeweb/wildfly_producao/bin/./standalone.sh -Djape.lazy.init=true -Djape.lob.fields.as.lazy=true -Djape.ignore.ligacao.inconsistente=true"]
