--- a/template/jiva-w/config.yml
+++ b/template/jiva-w/config.yml
@@ -3,3 +3,4 @@ description: |
   Container jiva-w com o servidor de aplicação WILDFLY
 version: 1.0
 category: Collaboration
+maintainer: Highlander Dantas <highlander.dantas@sankhya.com.br>
