--- a/template/teatrou/config.yml
+++ b/template/teatrou/config.yml
@@ -3,3 +3,4 @@ description: |
   Container teatrou com o servidor de aplicação java
 version: 1.0
 category: Collaboration
+maintainer: Highlander Dantas <highlander.dantas@sankhya.com.br>
