--- a/template/oracle-db-exporter/0/docker-compose.yml
+++ b/template/oracle-db-exporter/0/docker-compose.yml
@@ -1,6 +1,6 @@
 version: '2'
 services:
-  oracledb_exporter:
+  oracledb-exporter:
     image: iamseth/oracledb_exporter:0.0.6
     restart: always
     environment:
