--- a/template/oracle-db-exporter/0/docker-compose.yml
+++ b/template/oracle-db-exporter/0/docker-compose.yml
@@ -11,6 +11,8 @@ services:
       - DATA_SOURCE_NAME=${IP_BD}/${SENHA_BD}@IP_BD/${SID_BD}
     ports: 
       - "9161"
+    links: 
+      - "oracle-xe"
     health_check:
         port: 9161
         request_line: GET / HTTP/1.0
@@ -22,4 +24,19 @@ services:
         healthy_threshold: 1
         response_timeout: 60000
 
+  oracle-xe:
+    image:  wnameless/oracle-xe-11g:16.04
+    restart: always
+    ports: 
+      - "1521"
+    health_check:
+        port: 9161
+        request_line: GET / HTTP/1.0
+        interval: 90000
+        initializing_timeout: 300000
+        reinitializing_timeout: 300000
+        unhealthy_threshold: 3
+        strategy: recreate
+        healthy_threshold: 1
+        response_timeout: 60000
     
