--- a/template/oracle-db-exporter/0/docker-compose.yml
+++ b/template/oracle-db-exporter/0/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '2'
 services:
   oracledb-exporter:
-    image: iamseth/oracledb_exporter:0.0.6
+    image: iamseth/oracledb_exporter
     restart: always
     environment:
       - DATA_SOURCE_NAME=${usuario_bd}/${senha_bd}@${ip_bd}/${sid_bd}
