--- a/template/oracle-db-exporter/0/rancher-compose.yml
+++ b/template/oracle-db-exporter/0/rancher-compose.yml
@@ -22,6 +22,7 @@ catalog:
       description: |
         Usuário do Banco de Dados
       type: "string"
+      default: "system"
       required: true
     - variable: "senha_bd"
       label: "Senha do Banco de Dados"
