--- a/charts/jiva-w/1.0/Chart.yaml
+++ b/charts/jiva-w/1.0/Chart.yaml
@@ -1,5 +1,5 @@
 description: Jiva-W
-icon: https://s3-sa-east-1.amazonaws.com/jiva-docker/rancher2/catalogIcon-jiva-w.svg
+icon: https://s3-sa-east-1.amazonaws.com/jiva-docker/rancher2/catalogIcon-jiva-w.png
 home: https://www.jiva.com.br
 name: jiva-w
 version: 1.0
