--- a/charts/jiva-w/1.0/values.yaml
+++ b/charts/jiva-w/1.0/values.yaml
@@ -58,13 +58,11 @@ esocial:
 
 ## Configurações de url de acesso
 loadBalancer:
+  dns: .dev.jiva.com.br
   jivaw:
     enabled: false
-    hostname: ""
   datasync:
     enabled: false
-    hostname: ""
-  sanesocial:
+  esocial:
     enabled: false
-    hostname: ""
 
